<resources>
    <string name="app_name">GR8 CLAFIS WeatherApp</string>
    <string name="forkert_login">Invalid credentials</string>
    <string name="toast_exit">Press back again to exit</string>
    <string name="app_logout">Click here to sign out</string>
    <string name="logout_button">Sign out</string>
    <string name="logon_btn_login">Login</string>
    <string name="logon_hint_username">User ID</string>
    <string name="logon_hint_password">Password</string>
    <string name="logon_desc_logo">CLAFIS Logo</string>
    <string name="logon_input_default_uid">5</string>
    <string name="logon_success">Success</string>
    <string name="logon_failure">Invalid credentials</string>
    <string name="logon_toast_username">Please provide a user ID</string>
    <string name="no_data">Intet data i det angivne tidsrum</string>
    <string name="start_date">Choose start date</string>
    <string name="end_date">Choose end date</string>

    <string name="last_updated">Last updated</string>
    <string name="temperature">Temperature</string>
    <string name="downpour">Downpour</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="air_pressure">Air pressure</string>
    <string name="action_settings">Settings</string>
    <string name="outdated_content">Old</string>

    <string name="searchHint">Search…</string>
    <string name="loadingText">Loading stations…</string>
    <string name="loadingTextOverview">Loading…</string>
    <string name="error">Error</string>

    <!-- Map view -->
    <string name="map_snippet_temperature">Temperature</string>
    <string name="map_snippet_humidity">Humidity</string>
    <string name="map_snippet_no_data">No data available</string>
    <string name="map_snippet_load_failed">Could not load selected station</string>

    <!-- Font awesome icons -->
    <string name="icon_temp">&#xf02b;</string>
    <string name="calendar_icon">&#xf073;</string>
    <string name="no_search_results">Sorry, no weather stations matches your query.</string>
    <string name="no_stations">Oops, you currently don\'t own any stations.\nVisit http://www.clafis-project.eu for more information.</string>

    <!-- Activity titles -->
    <string name="title_mainActivity">Stations</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_map_overview">Map</string>
    <string name="title_activity_maps">Map</string>

    <!-- Tabs titles -->
    <string name="listTab">LIST</string>
    <string name="mapTab">MAP</string>

    <!-- Station overview -->
    <string name="station_overview_error_icon">&#xf071;</string>
    <string name="station_overview_error_text">Could not load any recent data from the station. Please use graphs to select an appropriate time range to display data within.</string>

    <string name="station_tabs_overview">Overview</string>
    <string name="station_tabs_temperature_rain">Temperature\n&amp; Humidity</string>
    <string name="station_tabs_pressure_wind">Pressure\n&amp; Wind</string>
    <string name="station_tabs_unknown">Unknown</string>

    <!-- Settings strings and arrays -->
    <string name="settings_save_success">Changes to settings has been saved.</string>

    <string name="temp">Temperature unit</string>
    <string-array name="temp_options_titles">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="temp_options_values">
        <item>°C</item>
        <item>°F</item>
    </string-array>

    <string name="pressure">Pressure unit</string>
    <string-array name="pressure_options">
        <item>hPa</item>
        <item>bar</item>
        <item>atm</item>
        <item>mmHg</item>
    </string-array>

    <string name="windspeed">Wind speed unit</string>
    <string-array name="windspeed_options">
        <item>meters/second</item>
        <item>meters/hour</item>
        <item>kilometers/second</item>
        <item>kilometers/hour</item>
        <item>miles/hour</item>
    </string-array>
    <string-array name="windspeed_values">
        <item>m/s</item>
        <item>m/h</item>
        <item>km/s</item>
        <item>km/h</item>
        <item>mph</item>
    </string-array>

</resources>
