<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Units">
        <!-- Temperature -->
        <ListPreference
            android:defaultValue="Celsius"
            android:entries="@array/temp_options_titles"
            android:entryValues="@array/temp_options_titles"
            android:key="temp_unit"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/temp" />

        <!-- Pressure -->
        <ListPreference
            android:defaultValue="hPa"
            android:entries="@array/pressure_options"
            android:entryValues="@array/pressure_options"
            android:key="pressure_unit"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pressure" />

        <!-- Wind speed -->
        <ListPreference
            android:defaultValue="m/s"
            android:entries="@array/windspeed_options"
            android:entryValues="@array/windspeed_options"
            android:key="windspeed_unit"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/windspeed" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Language">
        <!-- Language -->
        <ListPreference
            android:defaultValue="English"
            android:entries="@array/language_options"
            android:entryValues="@array/language_options"
            android:key="app_language"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/langauge" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Account">
        <!--Logout -->
        <Preference
            android:title="@string/logout_button"
            android:summary="@string/app_logout"
            android:key="@string/app_logout"
        />
    </PreferenceCategory>
</PreferenceScreen>