<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grp8.weatherapp.Activities.LogonActivity"
    android:id="@+id/logon_layout_content">

    <ImageView
        android:id="@+id/imageLogo"
        android:src="@drawable/logo"
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logon_desc_logo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userIDTextLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/userIDText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/logon_hint_username" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userPasswordTextLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIDTextLayout"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/userPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/logon_hint_password"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_below="@+id/userPasswordTextLayout"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:text="@string/logon_btn_login"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="login"
        android:layout_marginBottom="80dp"/>

    </RelativeLayout>
</RelativeLayout>
